<resources>
    <string name="app_name" translatable="false">Parnasa</string>
    <string name="google_maps_key" translatable="false">AIzaSyCrS6TuEBif4blHCoOQ_3u7psPi1M3Bnio</string>
    <string name="fb_key" translatable="false">2582715255295712</string>
    <string name="publishable_key_for_stripe" translatable="false">pk_live_yEd9l7R8dtdbWgDDK33IfKvz</string>
    <string name="fb_ad_one" translatable="false">2828812443881284_2867322610030267</string>
    <string name="fb_ad_two" translatable="false">2828812443881284_2867334206695774</string>
    <string name="fb_ad_three" translatable="false">2828812443881284_2867336346695560</string>
    <string name="fb_ad_four" translatable="false">2828812443881284_2828814117214450</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-3581105679226075/7932395254</string>
    <string name="admob_unit_id" translatable="false">ca-app-pub-3581105679226075/7932395254</string>
    <string name="admob_coupon_ad_id" translatable="false">ca-app-pub-3581105679226075/7932395254</string>
    <string name="admob_help_ad_id" translatable="false">ca-app-pub-3581105679226075/7932395254</string>
    <string name="admob_settings_ad_id" translatable="false">ca-app-pub-3581105679226075/7932395254</string>
    <string name="admob_change_password_ad_id" translatable="false">ca-app-pub-3581105679226075/7932395254</string>
    <string name="admob_nav_setting_ad_id" translatable="false">ca-app-pub-3581105679226075/7932395254</string>
    <string name="admob_change_lang_ad_id" translatable="false">ca-app-pub-3581105679226075/7932395254</string>
    <string name="admob_home_ad_id" translatable="false">ca-app-pub-3581105679226075/7932395254</string>
    <string name="admob_create_job_ad_id" translatable="false">ca-app-pub-3581105679226075/7932395254</string>
    <string name="admob_job_list_ad_id" translatable="false">ca-app-pub-3581105679226075/7932395254</string>
    <string name="admob_job_detail_ad_id" translatable="false">ca-app-pub-3581105679226075/7932395254</string>
    <string name="admob_create_invoice_ad_id" translatable="false">ca-app-pub-3581105679226075/7932395254</string>
    <string name="admob_view_invoice_ad_id" translatable="false">ca-app-pub-3581105679226075/7932395254</string>
    <string name="admob_professional_rating_ad_id" translatable="false">ca-app-pub-3581105679226075/7932395254</string>
    <string name="admob_job_breackup_ad_id" translatable="false">ca-app-pub-3581105679226075/7932395254</string>
    <string name="admob_pay_invoice_ad_id" translatable="false">ca-app-pub-3581105679226075/7932395254</string>
    <string name="admob_job_location_ad_id" translatable="false">ca-app-pub-3581105679226075/7932395254</string>
    <string name="admob_traking_ad_id" translatable="false">ca-app-pub-3581105679226075/7932395254</string>
    <string name="admob_job_rate_ad_id" translatable="false">ca-app-pub-3581105679226075/7932395254</string>
    <string name="admob_payment_ad_id" translatable="false">ca-app-pub-3581105679226075/7932395254</string>
    <string name="admob_inbox_ad_id" translatable="false">ca-app-pub-3581105679226075/7932395254</string>
    <string name="admob_favorite_ad_id" translatable="false">ca-app-pub-3581105679226075/7932395254</string>
    <string name="admob_homeInterstitialAd_ad_id" translatable="false">ca-app-pub-3581105679226075/7932395254</string>
    <string name="title_activity_verification_code">VerificationCode</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_profile_details_one">ProfileDetailsOne</string>
    <string name="title_activity_verifycode">Verifycode</string>
    <string name="title_activity_profile_details_two">ProfileDetailsTwo</string>
    <string name="title_activity_profile_details_three">ProfileDetailsThree</string>
    <string name="title_activity_service_list">Service list</string>
    <string name="title_activity_payment_via">Payment Via</string>
    <string name="title_activity_payment__via">Payment_Via</string>
    <string name="title_activity_invoice">Invoice</string>
    <string name="title_activity_add_rating">AddRating</string>
    <string name="title_activity_job_break_up">JobBreakUp</string>
    <string name="some_thing_wrong">Something went wrong</string>
    <string name="no_social_type">No social type found</string>
    <string name="search_msg">Search Message</string>
    <string name="map_of_google">Map</string>
    <string name="no_waze_app_found">No WAZE app found please install from playstore</string>
    <string name="msg_validation_default_nav_sys">Please check one of them</string>
    <string name="invite_content">Hi there, I am using this cool app called Parnasa™️ Services. It is a good app if you are a Service Provider or need any Service, of more than 60 Categories. Download it from PlayStore</string>
    <string name="home">Home</string>
    <string name="cant_fetch_location">can\'t fetch location</string>
    <string name="report">Report</string>
    <string name="select_map">Select Map</string>
    <string name="new_notification">New Notification</string>
    <string name="job_post">A job has been posted for you</string>
    <string name="view_lbl">View</string>
    <string name="fingerprint_title">Fingerprint Authentication</string>
    <string name="fingerprint_msg">Would you like to add fingerprint authentication?</string>
    <string name="google_map">Google Map</string>
    <string name="waze_map">Waze Map</string>
    <string name="lbl_professional_selection">Choose this if you are a professional:</string>
    <string name="lbl_customer_selection">Choose this if you are a customer:</string>
    <string name="lbl_professional_sub_selection">Register and Customer can call you.</string>
    <string name="lbl_customer_sub_selection">Register for free and start calling professionals.</string>
    <string name="lbl_professional_sole">Are you sole worker, with own company?</string>
    <string name="lbl_professional_agent">Are you employer or agent with up to 20 workers?</string>
    <string name="lbl_choose">Choose this screen!</string>
    <string name="signup">Sign up</string>
    <string name="lbl_already_verify">If you are already verified user please login</string>
    <string name="user_name_email">User Name(Email)</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password"><u>Forgot Password</u></string>
    <string name="lbl_social">or connect with social</string>
    <string name="msg_email_validation">Please enter email</string>
    <string name="msg_password_validation">Please enter password</string>
    <string name="msg_facebook_login_error">Oops. We cannot get your information. Please change your privacy settings and try again</string>
    <string name="msg_facebook_login_failed">Error. Please sign up with email</string>
    <string name="msg_googleapi_not_connect">Google api not connected</string>
    <string name="msg_google_login_failed">Login Failed</string>
    <string name="msg_network_error">Network Error !</string>
    <string name="msg_finger_print_not_support">Your device does not support fingerprint authentication</string>
    <string name="msg_enable_finger_permission">Please enable the fingerprint permission</string>
    <string name="msg_no_finger_config">No fingerprint configured. Please register at least one fingerprint in your device\'s Settings</string>
    <string name="msg_lock_security">Please enable lock screen security in your device\'s Settings</string>
    <string name="finger_auth_error">Authentication error</string>
    <string name="finger_auth_failed">Authentication failed</string>
    <string name="finger_auth_help">Authentication help</string>
    <string name="finger_auth_success">Authentication success!</string>
    <string name="save_and_next">Save And Next</string>
    <string name="signup_lbl_msg">Before using the app, please fill in below information</string>
    <string name="search_location">Search Location</string>
    <string name="address">Address</string>
    <string name="login_with_touch">or Login with Touch ID</string>
    <string name="lbl_quick_register">Quick Register</string>
    <string name="email">Email</string>
    <string name="dummy_email" translatable="false">name@example.com</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_password">Enter Password</string>
    <string name="service_name">Service Name</string>
    <string name="enter_service_name">Enter Service Name</string>
    <string name="service_and_branch">Service Keyword / Branch</string>
    <string name="enter_keyword">Enter Keyword</string>
    <string name="address_location">Address/Location</string>
    <string name="enter_address">Enter Address</string>
    <string name="policy_one">I agree and accept the&#160;</string>
    <string name="policy_two">Privacy Policy</string>
    <string name="policy_three">&#160;and the&#160;</string>
    <string name="policy_four">Terms of Use</string>
    <string name="submit">Submit</string>
    <string name="submit_review">Submit Review</string>
    <string name="submited_review">Review Submitted!</string>
    <string name="msg_review_submitted">You have already review submitted!</string>
    <string name="msg_sms_info">You will get sms or email code…</string>
    <string name="from_camera">From Camera</string>
    <string name="camera_roll">From Cameraroll</string>
    <string name="cancel">Cancel</string>
    <string name="add_photo">Add Photo</string>
    <string name="select_file">Select File</string>
    <string name="permission_denied">Permission denied</string>
    <string name="upload_photo">Uploading Photo…</string>
    <string name="please_wait">Please wait…</string>
    <string name="service_time_out">Server time out.\n please try again later.</string>
    <string name="verification_code">Verification Code</string>
    <string name="sms_verification_code">SMS Verification Code</string>
    <string name="email_verification_code">Email Verification Code</string>
    <string name="add_sms_verification_code">Add sms verification code</string>
    <string name="add_email_verification_code">Add email verification code</string>
    <string name="v_code"><u>RESEND SMS VERIFICATION CODE</u></string>
    <string name="ve_code"><u>RESEND EMAIL VERIFICATION CODE</u></string>
    <string name="or">Or</string>
    <string name="payment">Payment</string>
    <string name="your_jobs">Your Jobs</string>
    <string name="coupon">Coupon</string>
    <string name="favorites">Favorites</string>
    <string name="inbox">Inbox</string>
    <string name="wallet">Wallet</string>
    <string name="invite">Invite</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="dispatch">Dispatch</string>
    <string name="job_rate">Job Rate</string>
    <string name="rating_and_review">Rating &amp; Review</string>
    <string name="add_review">Add review</string>
    <string name="add_rating">Add rating</string>
    <string name="loc_service_off">Location Service Turn Off</string>
    <string name="lbl_gps">It looks like your privacy settings are preventing us from accessing your location to find services. You can fix that by doing the following:</string>
    <string name="step_one">1. Close this app.</string>
    <string name="step_two">2. Open the settings app.</string>
    <string name="step_three">3. Scroll to the bottom and select this app in the list.</string>
    <string name="step_four">4. Turn the location on.</string>
    <string name="step_five">5. Open this app and try again.</string>
    <string name="turn_on">Turn On</string>
</resources>