<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:rotationY="@integer/locale_mirror_flip"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_gps_disable" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/loc_service_off"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/lbl_gps"
            android:textColor="@color/colorBlack"
            android:textSize="14sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/step_one"
            android:textColor="@color/colorBlack"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/step_two"
            android:textColor="@color/colorBlack"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/step_three"
            android:textColor="@color/colorBlack"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/step_four"
            android:textColor="@color/colorBlack"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/step_five"
            android:textColor="@color/colorBlack"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtButtonTurnOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="22dp"
            android:background="@color/c_btn_blue"
            android:paddingBottom="6dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="6dp"
            android:text="@string/turn_on"
            android:textAllCaps="true"
            android:textColor="@color/c_white"
            android:textSize="16sp" />

    </LinearLayout>

</RelativeLayout>