<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="20dp"
        android:text="@string/new_notification"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="16dp"
        android:paddingTop="8dp"
        android:text="@string/job_post"
        android:textColor="@color/colorBlack"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="false"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/cancel"
            android:textColor="@color/c_btn_blue"
            android:textSize="16sp" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/txtView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="false"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/view_lbl"
            android:textColor="@color/c_btn_blue"
            android:textSize="16sp" />

    </LinearLayout>
</LinearLayout>