<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAllCaps="true"
        android:textColor="@color/colorTitle"
        android:textSize="16sp"
        android:text="@string/select_map"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linlayGMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_google_map" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/google_map"
            android:textColor="@color/colorBlack" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/grayTextColor" />

    <LinearLayout
        android:id="@+id/linlayWMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:padding="4dp"
            android:src="@drawable/ic_waze_map" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/waze_map"
            android:textColor="@color/colorBlack" />
    </LinearLayout>
</LinearLayout>